# ponzi

./: LICENSE  README.md  mypy.ini  pyproject.toml
ponzi/color/: color.py  linear.py
tests/: test_color.py  test_ponzi.py
